# Orion--Eira-Nexus

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: lib.rs  orion_autonomous_builder.rs
eira/: Cargo.toml
eira/src/: auth.rs  lib.rs  policy_gate.rs  sik.rs
nexus/: Cargo.toml
nexus/src/: lib.rs  precausal_buffer.rs
physics/: Cargo.toml
physics/src/: engine.rs  lib.rs  orch_or.rs
src/: lib.rs  main.rs
terminal/: Cargo.toml
terminal/src/: eira_terminal.rs  lib.rs  main.rs
